{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 268,
  "lineage": "8200fca6-5c8c-ac10-a83c-9cba903f9c14",
  "resources": [
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949833ddea1d62d5",
            "domain": "vpc",
            "id": "eipalloc-0949833ddea1d62d5",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-233-202-116.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.202.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:internet-gateway/igw-082842cb397420913",
            "id": "igw-082842cb397420913",
            "owner_id": "644342757604",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949833ddea1d62d5",
            "connectivity_type": "public",
            "id": "nat-0f3daf7b6e387b15c",
            "network_interface_id": "eni-02f521dddc0e0a029",
            "private_ip": "10.0.64.169",
            "public_ip": "44.233.202.116",
            "subnet_id": "subnet-0cb5ea815a85ea454",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_eip.nat",
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2a",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:route-table/rtb-0c28277d2cc57f274",
            "id": "rtb-0c28277d2cc57f274",
            "owner_id": "644342757604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3daf7b6e387b15c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eks_cluster.aws_eip.nat",
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_nat_gateway.nat",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2a",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:route-table/rtb-056d5abbdfd97576d",
            "id": "rtb-056d5abbdfd97576d",
            "owner_id": "644342757604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082842cb397420913",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021def36cba3ff21c",
            "route_table_id": "rtb-0c28277d2cc57f274",
            "subnet_id": "subnet-0327a0f238081550a"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_eip.nat",
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_nat_gateway.nat",
            "module.aws_eks_cluster.aws_route_table.private",
            "module.aws_eks_cluster.aws_subnet.private-us-east-2a",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2a",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b6b30d702aba5f",
            "route_table_id": "rtb-0c28277d2cc57f274",
            "subnet_id": "subnet-0374751282207df3b"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_eip.nat",
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_nat_gateway.nat",
            "module.aws_eks_cluster.aws_route_table.private",
            "module.aws_eks_cluster.aws_subnet.private-us-east-2b",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2a",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe47944895d154a",
            "route_table_id": "rtb-056d5abbdfd97576d",
            "subnet_id": "subnet-0cb5ea815a85ea454"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_route_table.public",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2a",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba120c4504069177",
            "route_table_id": "rtb-056d5abbdfd97576d",
            "subnet_id": "subnet-0053e779ad24811a5"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_internet_gateway.igw",
            "module.aws_eks_cluster.aws_route_table.public",
            "module.aws_eks_cluster.aws_subnet.public-us-east-2b",
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:subnet/subnet-0327a0f238081550a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327a0f238081550a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644342757604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-us-west-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-us-west-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:subnet/subnet-0374751282207df3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0374751282207df3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644342757604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-west-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-west-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:subnet/subnet-0cb5ea815a85ea454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5ea815a85ea454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644342757604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2c",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-west-2c",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:subnet/subnet-0053e779ad24811a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0053e779ad24811a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644342757604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2d",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-west-2d",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-048f29703f11c8cf2"
          },
          "dependencies": [
            "module.aws_eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eks_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644342757604:vpc/vpc-048f29703f11c8cf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0869370aca50ed0",
            "default_route_table_id": "rtb-0d0774d40b8889bd1",
            "default_security_group_id": "sg-08f359dec865f6eba",
            "dhcp_options_id": "dopt-01449fc8c01f0305b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048f29703f11c8cf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0774d40b8889bd1",
            "owner_id": "644342757604",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}